对文档进行基本编辑

--- a/source/_posts/人工智能/Deep-Learn/深度学习原理.md
+++ b/source/_posts/人工智能/Deep-Learn/深度学习原理.md
@@ -1,4 +1,17 @@
 ---
 title: 深度学习原理
 date: 2019-08-18 17:10:24
+comments: true
+categories:
+- 人工智能
+- 深度学习
+tags:
+- 深度学习 原理
 ---
+
+# 深度学习原理
+
+## 概述
+深度学习是基于大数据理论，采用统计学方法，来使机器在多次迭代中逐步完成多个甚至大量的参数取值，来实现对数据一定模式的接近甚至超越人类的理解效率和准确率。
+
+<!-- more -->
