--- a/source/_posts/人工智能/Deep-Learn/深度学习简介.md
+++ b/source/_posts/人工智能/Deep-Learn/深度学习简介.md
@@ -1,4 +1,18 @@
 ---
 title: 深度学习简介
 date: 2019-08-18 17:10:09
+comments: true
+categories:
+- 人工智能
+- 深度学习
+tags:
+- 深度学习 通论
 ---
+
+# 深度学习简介
+
+## 概述
+
+深度学习，基于大数据和神经网络，来训练机器对数据产生一定且符合科学规律和人类经验的数据处理能力。
+
+<!-- more -->
