--- a/source/_posts/人工智能/Deep-Learn/神经网络简介.md
+++ b/source/_posts/人工智能/Deep-Learn/神经网络简介.md
@@ -1,4 +1,19 @@
 ---
 title: 神经网络简介
 date: 2019-08-18 17:11:55
+comments: true
+categories:
+- 人工智能
+- 深度学习
+- 神经网络
+tags:
+- 神经网络 通论
 ---
+
+# 神经网络简介
+
+## 概述
+
+神经网络，是采用大量参数和多层迭代模式，基于统计和概率理论，来实现网络中参数的可解，并形成一定的网络理解，存储和认知能力。
+
+<!-- more -->
