--- a/source/_posts/人工智能/人工智能简介.md
+++ b/source/_posts/人工智能/人工智能简介.md
@@ -1,4 +1,17 @@
 ---
 title: 人工智能简介
 date: 2019-08-18 17:09:27
+comments: true
+categories:
+- 人工智能
+tags:
+- 人工智能 通论
 ---
+
+# 人工智能简介
+
+## 概述
+
+人工智能，是人类通过相关技术（基于计算机）来对人脑和人类智慧进行模拟，从而实现机器的自觉自知，进而实现机器的智能化。
+
+<!-- more -->
