--- a/source/_posts/分布式系统/分布式系统简介.md
+++ b/source/_posts/分布式系统/分布式系统简介.md
@@ -1,4 +1,16 @@
 ---
-title: ”分布式系统简介“
+title: 分布式系统简介
 date: 2019-08-18 17:01:30
+comments: true
+categories:
+- 分布式系统
+tags:
+- 分布式系统基础
 ---
+
+# 分布式系统简介
+
+## 概述
+分布式系统是随着业务产品增长的需求而发展起来的，目前大多数都是基于分布式系统进行开发，而分布式系统和微服务是缺一不可的。
+
+<!-- more -->
