--- a/source/_posts/算法和数据结构/算法/算法简介.md
+++ b/source/_posts/算法和数据结构/算法/算法简介.md
@@ -1,4 +1,17 @@
 ---
 title: 算法简介
 date: 2019-08-18 17:13:17
+comments: true
+categories:
+- 算法
+tags:
+- 算法基础
 ---
+
+# 算法简介
+
+## 概述
+
+算法，处理问题求得解答的一系列步骤，算法和数学是紧密相关的。
+
+<!-- more -->
