--- a/source/_posts/编程语言/编程语言简介.md
+++ b/source/_posts/编程语言/编程语言简介.md
@@ -1,4 +1,17 @@
 ---
 title: 编程语言简介
 date: 2019-08-18 17:04:33
+comments: true
+categories:
+- 编程语言
+tags:
+- 编程语言
 ---
+
+# 编程语言简介
+
+## 概述
+编程语言一直在发展，编程语言为人类掌握计算机的计算能力并充分发挥人类的创造力起到了很大的作用。同时语言的特性也在不断的发展和变化，编程范式也有多种。
+单每一个编程语言都不止一种范式，从而来适应在多种场景下的实际需要。
+
+<!-- more -->
